# jupyter-vscode

./: .gitignore  LICENSE  TODO.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  post-create.sh  update-content.sh
notebooks/: notebook.ipynb
