[tool.poetry]
package-mode = false
description = ""
authors = ["Michael Hopcroft <mhop@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.14.1"
numpy = "^2.1.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

